# dino-jump

./: .gitignore  .pylintrc  README.md  ci_venv.sh  hand_detection.py  run_ci.sh  setup.sh  test.py
Game Logic/: python_emulator.py
camera/: test_improvements.py
ci/: .clang-format  .pylintrc  ci.md  ci_venv.sh  pre-commit  run_ci.sh  setup_pre-commit.sh
display/: fan_wahoo.ino
display/sketches/: alex_library.ino  old_library.ino
game/: base_dino_layout.py  dino_jump_main.py  final_obs_gen.py  python_emulator.py  sprites.py
game/cpp/emulator_example/: CMakeLists.txt  README.md
game/cpp/emulator_example/include/: emulator.hpp  frames.hpp
game/cpp/emulator_example/src/: emulator.cpp  frames.cpp  game.cpp
game/cpp/production/: CMakeLists.txt
game/cpp/production/include/: bit_array_2d.hpp  constants.hpp  dino.hpp  game.hpp  obstacle.hpp  sprites.hpp  terminal_display.hpp
game/cpp/production/src/: dino.cpp  game.cpp  main.cpp  obstacle.cpp  sprites.cpp  terminal_display.cpp
game/python/: compressed_frame_parser.py  dino_jump_main.py
input/ir_sensor/: ir_sensor.ino  plot_ir.py  process_data.py  sample_data.csv
